Changed h3 to paragraph

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
       <title>David's bio page</title>
   </head>
   <body>
-      <h3>Hello, World!</h3>
+      <p>Paragraph</p>
   </body>
 </html>
